--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,6 @@
 PORT=3000
 MONGO_URI =mongodb+srv://Tata:3333@cluster0.lhvc3.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=superdupersecretkeygi
+EMAIL_USER=test@gmail.com
+EMAIL_PASS=3333
+TEAM_NAME=SchoolMS
