--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "express-handlebars": "^8.0.1",
     "hbs": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.2"
+    "mongoose": "^8.9.2",
+    "nodemailer": "^6.9.16"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
